# glossary-generator

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  POWERBI_IMPLEMENTATION.md  main.py  pyproject.toml  test_dax_local.py
app/: __init__.py  activities.py  models.py  settings_store.py  workflow.py
clients/: __init__.py  atlan_client.py  llm_client.py  mdlh_client.py  usage_client.py
components/: pubsub.yaml  secretstore.yaml  statestore.yaml
frontend/static/: review.js  styles.css
frontend/templates/: guide.html  index.html  review.html  settings.html
generators/: __init__.py  context_builder.py  file_parser.py  prompts.py  term_generator.py
handlers/: __init__.py  review_handler.py
tests/: __init__.py
tests/e2e/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_clients.py  test_generators.py  test_models.py
