[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glossary-generator"
version = "0.1.0"
description = "Auto-generates business glossary terms from metadata and usage signals"
requires-python = ">=3.11"
dependencies = [
    "atlan-application-sdk[tests,workflows]>=2.3.0",
    "poethepoet",
    "pyarrow>=15.0.0",
    "anthropic>=0.18.0",
"openai>=1.0.0",
    "tiktoken>=0.5.0",
    "pyatlan>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.poe.tasks]
start-deps = "dapr run --app-id glossary-generator --dapr-http-port 3500 --components-path ./components -- echo 'Dapr sidecar started'"
start = "python main.py"
test = "pytest tests/ -v"
test-unit = "pytest tests/unit/ -v"
test-e2e = "pytest tests/e2e/ -v"

[tool.hatch.build.targets.wheel]
packages = ["app", "clients", "generators", "handlers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
